React Native - Video,Images

--- a/React Native/todo-app/app.json
+++ b/React Native/todo-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "todo-app",
-    "slug": "snack-7f9d1f7e-b83b-48f5-8882-b93417f6d191",
+    "name": "assignment",
+    "slug": "snack-cd2dd658-2b40-4bed-bf71-4b1ac8939ed2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
