--- a/React Native/todo-app/package.json
+++ b/React Native/todo-app/package.json
@@ -16,13 +16,12 @@
     "react-native-web": "~0.13.12",
     "expo-constants": "~9.3.1",
     "react-native-paper": "3.6.0",
-    "@react-navigation/stack": "*",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "5.0.5",
     "react-native-screens": "~2.15.0",
+    "@react-navigation/stack": "*",
+    "@react-navigation/native": "*",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-navigation": "*"
+    "@react-native-community/masked-view": "0.1.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
